Frontend interligado com nova BD de users e vehicles