@@ -1,203 +1,161 @@
 package pt.ipcb.ad.frontend_service.controller;
 
 import jakarta.servlet.http.HttpSession;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.servlet.view.RedirectView;
 import pt.ipcb.ad.frontend_service.client.RentalClient;
 import pt.ipcb.ad.frontend_service.client.UserClient;
 import pt.ipcb.ad.frontend_service.client.VehicleClient;
 import pt.ipcb.ad.frontend_service.dto.RentalDto;
 import pt.ipcb.ad.frontend_service.dto.UserDto;
 import pt.ipcb.ad.frontend_service.dto.VehicleDto;
-import jakarta.servlet.http.HttpServletRequest;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 public class WebController {
 
-    @Autowired
-    private VehicleClient vehicleClient;
+    private final VehicleClient vehicleClient;
+    private final RentalClient rentalClient;
+    private final UserClient userClient;
 
-    @Autowired
-    private UserClient userClient;
-
-    @Autowired
-    private RentalClient rentalClient;
-
-    // --- NOVO: Lógica Global para a Navbar ---
-    @ModelAttribute
-    public void addAttributes(HttpSession session, Model model, HttpServletRequest request) {
-        // 1. Lógica do Login (Mantém-se)
-        try {
-            Object sessionUser = session.getAttribute("user");
-            if (sessionUser != null && sessionUser instanceof UserDto) {
-                model.addAttribute("user", (UserDto) sessionUser);
-                model.addAttribute("isLoggedIn", true);
-            } else {
-                model.addAttribute("isLoggedIn", false);
-            }
-        } catch (Exception e) {
-            model.addAttribute("isLoggedIn", false);
-        }
-
-        // 2. NOVA CORREÇÃO: Passar o URI atual para o HTML manualmente
-        model.addAttribute("currentURI", request.getRequestURI());
+    public WebController(VehicleClient vehicleClient, RentalClient rentalClient, UserClient userClient) {
+        this.vehicleClient = vehicleClient;
+        this.rentalClient = rentalClient;
+        this.userClient = userClient;
     }
 
-    @GetMapping("/")
-    public RedirectView index() {
-        RedirectView redirect = new RedirectView();
-        redirect.setUrl("/cars");
-        redirect.setContextRelative(true); // <--- O SEGREDO: Força ser relativo
-        return redirect;
-    }
-
-    // --- PÁGINA: LISTA DE CARROS ---
+    // --- LISTA DE CARROS ---
     @GetMapping("/cars")
-    public String listCars(Model model) {
+    public String listCars(Model model, HttpSession session) {
+        UserDto user = (UserDto) session.getAttribute("user");
+        if (user == null) return "redirect:/login";
+
         try {
-            List<VehicleDto> carros = vehicleClient.getAllVehicles();
-            model.addAttribute("listaCarros", carros);
+            List<VehicleDto> cars = vehicleClient.getAllVehicles();
+            model.addAttribute("listaCarros", cars);
         } catch (Exception e) {
-            model.addAttribute("erro", "Erro ao carregar veículos: " + e.getMessage());
+            model.addAttribute("erro", "Serviço de veículos indisponível.");
         }
+
+        model.addAttribute("user", user);
+        model.addAttribute("isLoggedIn", true);
+        model.addAttribute("currentURI", "/cars");
+
         return "cars";
     }
 
-    // --- PÁGINA: LISTA DE UTILIZADORES ---
+    // --- ALUGAR CARRO ---
+    @PostMapping("/rent-car/{vehicleId}")
+    public String rentCar(@PathVariable Long vehicleId, HttpSession session) {
+        UserDto user = (UserDto) session.getAttribute("user");
+
+        if (user == null) return "redirect:/login";
+
+        if (!user.getRoles().contains("CONDUTOR")) {
+            return "redirect:/cars?erro=Apenas condutores podem alugar!";
+        }
+
+        try {
+            RentalDto rental = new RentalDto();
+            rental.setUserId(user.getId());
+            rental.setVehicleId(vehicleId);
+
+            rentalClient.startRental(rental);
+
+            return "redirect:/my-rentals";
+        } catch (Exception e) {
+            return "redirect:/cars?erro=Falha ao iniciar aluguer.";
+        }
+    }
+
+    // --- TERMINAR ALUGUER (NOVO MÉTODO ADICIONADO) ---
+    @GetMapping("/stop-rental/{id}")
+    public String stopRental(@PathVariable Long id, HttpSession session) {
+        UserDto user = (UserDto) session.getAttribute("user");
+        if (user == null) return "redirect:/login";
+
+        try {
+            // Chama o backend para calcular preço e fechar a viagem
+            rentalClient.stopRental(id);
+        } catch (Exception e) {
+            System.out.println("Erro ao terminar aluguer: " + e.getMessage());
+            // Poderias redirecionar com ?erro=... se quisesses mostrar no HTML
+        }
+
+        // Redireciona de volta para a lista para veres o preço e o estado atualizado
+        return "redirect:/my-rentals";
+    }
+
+    // --- MINHAS VIAGENS (User Logado) ---
+    @GetMapping("/my-rentals")
+    public String myRentals(HttpSession session, Model model) {
+        UserDto user = (UserDto) session.getAttribute("user");
+        if (user == null) return "redirect:/login";
+
+        return viewUserRentals(user.getId(), session, model);
+    }
+
+    // --- LISTAR UTILIZADORES (ADMIN) ---
     @GetMapping("/users")
     public String listUsers(HttpSession session, Model model) {
-        // Opcional: Proteger para só ADMIN ver (podes adicionar depois)
+        UserDto user = (UserDto) session.getAttribute("user");
+
+        if (user == null) return "redirect:/login";
+        if (!user.getRoles().contains("ADMIN")) {
+            return "redirect:/cars";
+        }
+
         try {
             List<UserDto> users = userClient.getAllUsers();
             model.addAttribute("listaUsers", users);
         } catch (Exception e) {
             model.addAttribute("erro", "Erro ao carregar utilizadores: " + e.getMessage());
         }
+
+        model.addAttribute("user", user);
+        model.addAttribute("isLoggedIn", true);
+        model.addAttribute("currentURI", "/users");
+
         return "users";
     }
 
-    // --- PÁGINA: Perfil ---
-    @GetMapping("/profile")
-    public String profile(Model model, HttpSession session) {
-        // 1. IMPORTANTE: A chave tem de ser "user" (igual ao LoginController)
+    // --- VER VIAGENS DE UM USER ESPECÍFICO ---
+    @GetMapping("/users/{id}/rentals")
+    public String viewUserRentals(@PathVariable Long id, HttpSession session, Model model) {
         UserDto sessionUser = (UserDto) session.getAttribute("user");
 
-        if (sessionUser == null) {
-            return "redirect:/login"; // Se não encontrar "user", manda para o login
+        if (sessionUser == null) return "redirect:/login";
+
+        boolean isAdmin = sessionUser.getRoles().contains("ADMIN");
+        boolean isOwner = sessionUser.getId().equals(id);
+
+        if (!isOwner && !isAdmin) {
+            return "redirect:/cars";
         }
 
         try {
-            // Tenta buscar dados frescos à BD
-            UserDto freshUser = userClient.getUserById(sessionUser.getId());
-            model.addAttribute("user", freshUser);
-        } catch (Exception e) {
-            // Se falhar, usa os da sessão
-            model.addAttribute("user", sessionUser);
-            model.addAttribute("error", "Não foi possível sincronizar.");
-        }
-
-        return "profile";
-    }
-
-    // --- AÇÃO: ALUGAR CARRO ---
-    @GetMapping("/rent-car/{vehicleId}")
-    public String rentCarAction(@PathVariable Long vehicleId,
-                                HttpSession session,
-                                Model model) {
-
-        // 1. Verifica se está logado
-        UserDto user = (UserDto) session.getAttribute("user");
-        if (user == null) {
-            return "redirect:/login"; // Manda para o login se não estiver
-        }
-
-        try {
-            RentalDto rental = new RentalDto();
-            rental.setVehicleId(vehicleId);
-            rental.setUserId(user.getId()); // USA O ID REAL DO USER LOGADO!
-
-            rentalClient.startRental(rental);
-
-            return "redirect:/my-rentals";
-
-        } catch (Exception e) {
-            return "redirect:/cars?erro=" + "Erro: " + e.getMessage();
-        }
-    }
-
-    // --- PÁGINA: MINHAS VIAGENS ---
-    @GetMapping("/my-rentals")
-    public String myRentals(HttpSession session, Model model) {
-
-        // 1. Segurança: Se não houver user, manda para login
-        UserDto user = (UserDto) session.getAttribute("user");
-        if (user == null) {
-            return "redirect:/login";
-        }
-
-        try {
+            // Nota: Idealmente o backend teria um filtro por userId, mas assim funciona
             List<RentalDto> allRentals = rentalClient.getAllRentals();
 
-            // 2. Filtra apenas as viagens do utilizador logado (user.getId())
-            List<RentalDto> myRentals = allRentals.stream()
-                    .filter(r -> r.getUserId().equals(user.getId())) // <--- CORRIGIDO AQUI
-                    .toList();
+            List<RentalDto> userRentals = allRentals.stream()
+                    .filter(r -> r.getUserId() != null && r.getUserId().equals(id))
+                    .collect(Collectors.toList());
 
-            model.addAttribute("viagens", myRentals);
+            model.addAttribute("viagens", userRentals);
 
         } catch (Exception e) {
-            model.addAttribute("erro", "Erro ao carregar viagens: " + e.getMessage());
+            model.addAttribute("error", "Erro ao carregar viagens: " + e.getMessage());
         }
+
+        model.addAttribute("user", sessionUser);
+        model.addAttribute("isLoggedIn", true);
+        model.addAttribute("currentURI", "/my-rentals");
+
         return "my-rentals";
     }
-
-    // --- AÇÃO: TERMINAR VIAGEM ---
-    @GetMapping("/stop-rental/{id}")
-    public String stopRentalAction(@PathVariable Long id) {
-        try {
-            rentalClient.stopRental(id);
-        } catch (Exception e) {
-            System.out.println("Erro ao parar: " + e.getMessage());
-        }
-        return "redirect:/my-rentals";
-    }
-
-    @GetMapping("/add-car")
-    public String showAddCarForm(HttpSession session, Model model) {
-        UserDto user = (UserDto) session.getAttribute("user");
-
-        // Segurança: Se não for ADMIN, chuta para fora
-        if (user == null || !"ADMIN".equals(user.getRole())) {
-            return "redirect:/cars";
-        }
-
-        model.addAttribute("vehicle", new VehicleDto());
-        return "add-car"; // Vamos criar este HTML no passo 4
-    }
-
-    // --- AÇÃO: SALVAR CARRO ---
-    @PostMapping("/add-car")
-    public String saveCar(@ModelAttribute VehicleDto vehicle, HttpSession session) {
-        UserDto user = (UserDto) session.getAttribute("user");
-        if (user == null || !"ADMIN".equals(user.getRole())) {
-            return "redirect:/cars";
-        }
-
-        try {
-            vehicle.setAvailable(true); // Por defeito fica livre
-            vehicleClient.createVehicle(vehicle);
-            return "redirect:/cars";
-        } catch (Exception e) {
-            return "redirect:/add-car?erro=" + "Erro ao criar: " + e.getMessage();
-        }
-    }
-
 }
